# qbitcoin-0.9.6

./: .gitignore  COPYING  INSTALL  Makefile.am  README.md  configure.ac
contrib/: README.md  qbitcoin-qt.pro  qbitcoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  qbitcoin-qt.desktop  qbitcoin-qt.install  qbitcoin-qt.lintian-overrides  qbitcoin-qt.protocol  qbitcoind.bash-completion  qbitcoind.examples  qbitcoind.install  qbitcoind.lintian-overrides  qbitcoind.manpages  rules  watch
contrib/debian/examples/: qbitcoin.conf
contrib/debian/manpages/: qbitcoin-qt.1  qbitcoin.conf.5  qbitcoind.1
contrib/devtools/: README.md  fix-copyright-headers.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: bluematt-key.pgp  linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: README.md  background.psd  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  example-config.cfg  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: ._README_windows.txt  ._release-notes.md  Doxyfile  Doxyfile~  README.md  README_windows.txt  assets-attribution.md  build-msw.md  build-osx.md  build-unix.md  coding.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: ._release-notes-0.3.12.md  release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-qbitcoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi.in  ui.rc
share/certs/: BitcoinFoundation_Apple_Cert.pem  BitcoinFoundation_Comodo_Cert.pem  PrivateKeyNotes.md
share/pixmaps/: qbitcoin128.xpm  qbitcoin16.xpm  qbitcoin256.xpm  qbitcoin32.xpm  qbitcoin64.xpm
share/qt/: Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: .gitignore  Makefile.am  Makefile.include  Makefile~  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  leveldbwrapper.h  limitedmap.h  main.cpp  (+52 more)
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: qbitcoin_find_bdb48.m4  qbitcoin_qt.m4  qbitcoin_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  paymentrequestplus.cpp  (+57 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: qbitcoin_ach.ts  qbitcoin_af_ZA.ts  qbitcoin_ar.ts  qbitcoin_be_BY.ts  qbitcoin_bg.ts  qbitcoin_bs.ts  qbitcoin_ca.ts  qbitcoin_ca@valencia.ts  qbitcoin_ca_ES.ts  qbitcoin_cmn.ts  qbitcoin_cs.ts  qbitcoin_cy.ts  qbitcoin_da.ts  qbitcoin_de.ts  qbitcoin_de_AT.ts  qbitcoin_el_GR.ts  qbitcoin_en.ts  qbitcoin_eo.ts  qbitcoin_es.ts  qbitcoin_es_CL.ts  qbitcoin_es_DO.ts  qbitcoin_es_MX.ts  qbitcoin_es_UY.ts  qbitcoin_et.ts  qbitcoin_eu_ES.ts  qbitcoin_fa.ts  qbitcoin_fa_IR.ts  qbitcoin_fi.ts  qbitcoin_fr.ts  qbitcoin_fr_CA.ts  qbitcoin_gl.ts  qbitcoin_gu_IN.ts  qbitcoin_he.ts  qbitcoin_hi_IN.ts  qbitcoin_hr.ts  qbitcoin_hu.ts  qbitcoin_id_ID.ts  qbitcoin_it.ts  qbitcoin_ja.ts  qbitcoin_ka.ts  (+31 more)
src/qt/res/icons/: qbitcoin.icns
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: DoS_tests.cpp  Makefile.am  README  base58_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  netbase_tests.cpp  rpc_wallet_tests.cpp  test_qbitcoin.cpp  util_tests.cpp  wallet_tests.cpp
src/test/data/: tx_valid.json
